dnl Process this file with autoconf to produce a configure script.
AC_INIT(makejar.sh)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(jep, 2.3)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl features
AC_ARG_DEALLOC
AC_ARG_EXCEPT

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
LT_AC_PROG_SED

dnl mrj - uses libraries
AM_PROG_LIBTOOL

dnl mrj - check JAVA_HOME, set path
AC_CHECK_JAVA_HOME
AC_PROG_JAVAC
AC_PROG_JAVAH
AC_JAVA_LIBJVM
AC_JAVAX_SCRIPTING

dnl mrj - disable long double warning
AC_CHECK_LONG_DOUBLE
AC_CHECK_SIZEOF([float])

dnl Checks for libraries.
PGAC_CHECK_PYTHON_ALL
dnl check found python version
AC_CHECK_PYTHON_VERSION
dnl check python compiled with thread support
AC_CHECK_PYTHON_THREAD

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h error.h)


jm_CHECK_TYPE_STRUCT_UTIMBUF
AC_HEADER_MAJOR
AC_FUNC_ALLOCA
AC_STRUCT_TM
AC_STRUCT_ST_BLOCKS
AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNCS(mkfifo)
AC_CHECK_FUNC(mknod)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile jep.lsm jep.spec src/Makefile src/jep/Makefile)
